--- a/style.css
+++ b/style.css
@@ -74,3 +74,21 @@ form {
 .resultados-color {
     background-color: rgb(192, 16, 16);
 }
+
+
+/* Footer */
+
+  .footer-derechos .terminos {
+   white-space: pre-wrap;
+  }
+  
+  .img-footer {
+    margin-left: 10px;
+   width: 30px;
+   height: 30px;
+  }
+  
+   .header-blanco {
+    text-decoration: none;
+    color: black;
+  }
